# g7mediabooster

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT_CONSTITUTION.md  LICENSE  README.md  SECURITY.md  SPEC.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  g7-module-release.yml  nightly.yml  performance.yml  server-release.yml
adapters/gnuboard5/: README.md
adapters/gnuboard5/jiwonpapa-g7mediabooster/: README.md  composer.json  package-lock.json  package.json  (+4 more)
adapters/gnuboard7/: README.md
apps/g7mb-api/: Cargo.toml
apps/g7mb-api/src/: lib.rs  main.rs  openapi.rs  public_delivery.rs
apps/g7mb-api/tests/: public_delivery.rs
apps/g7mb-sandbox/: Cargo.toml
apps/g7mb-sandbox/src/: main.rs
apps/g7mb-worker/: Cargo.toml
apps/g7mb-worker/src/: lib.rs  main.rs
apps/g7mb-worker/tests/: load_100.rs
apps/g7mbctl/: Cargo.toml
apps/g7mbctl/src/: installer.rs  main.rs  setup_config.rs
apps/g7mbctl/src/installer/: directories.rs
config/: g7mb.example.toml
crates/g7mb-application/: Cargo.toml
crates/g7mb-application/src/: delivery.rs  delivery_security.rs  inventory.rs  lib.rs  lifecycle.rs  operations.rs  policies.rs  processing.rs  uploads.rs
crates/g7mb-auth/: Cargo.toml
crates/g7mb-auth/src/: lib.rs
crates/g7mb-config/: Cargo.toml
crates/g7mb-config/src/: delivery_settings.rs  lib.rs
crates/g7mb-contracts/: Cargo.toml
crates/g7mb-contracts/src/: lib.rs
crates/g7mb-domain/: Cargo.toml
crates/g7mb-domain/benches/: policy.rs
crates/g7mb-domain/src/: lib.rs
crates/g7mb-media/: Cargo.toml  build.rs
crates/g7mb-media/src/: lib.rs  openh264_fallback.rs
crates/g7mb-media/tests/fixtures/: fake-ffmpeg  fake-ffprobe
crates/g7mb-object-store-s3/: Cargo.toml
crates/g7mb-object-store-s3/src/: lib.rs
crates/g7mb-object-store-s3/tests/: live_provider_conformance.rs  minio_conformance.rs
crates/g7mb-persistence-sqlite/: Cargo.toml
crates/g7mb-persistence-sqlite/migrations/: 0001_initial.sql  0002_upload_batches.sql  0003_multipart_part_size.sql  0004_derivatives.sql  0005_site_policy_snapshots.sql  0006_pin_job_site_policy_revision.sql  0007_tenant_fair_queue.sql  0008_lifecycle_cleanup.sql  0009_storage_usage_quota.sql  0010_orphan_inventory.sql  0011_operational_counters.sql
crates/g7mb-persistence-sqlite/src/: backup.rs  lib.rs
crates/g7mb-telemetry/: Cargo.toml
crates/g7mb-telemetry/src/: lib.rs
crates/g7mb-test-support/: Cargo.toml
deploy/: README.md  official-features-v1.json
deploy/nginx/: g7mediabooster-public.conf
deploy/systemd/: g7mediabooster-api.service  g7mediabooster-backup.service  g7mediabooster-backup.timer  g7mediabooster-cleanup.service  g7mediabooster-cleanup.timer  g7mediabooster-inventory.service  g7mediabooster-inventory.timer  g7mediabooster-worker.service  g7mediabooster.target
docs/: ARCHITECTURE.md  BACKUP_RESTORE.md  BOOTSTRAP_STATUS.md  COMPLETION_AUDIT_20260716.md  DEVELOPMENT.md  EXTERNAL_VALIDATION_20260716.md  FACE_FOCAL_POINT_SECURITY_CONTRACT.md  GNUBOARD7_INTEGRATION.md  GNUBOARD7_RELEASE.md  HARNESS_GOVERNANCE.md  IMPLEMENTATION_PLAN.md  LIFECYCLE.md  OPERATIONS.md  ORPHAN_INVENTORY.md  PUBLIC_THUMBNAIL_DELIVERY.md  QUEUE_MODEL.md  REQUIREMENTS_STATUS.md  SECURITY.md  SERVER_INSTALL.md  SETUP_CUI.md  THUMBNAIL_SERVER_SECURITY_REVIEW_20260724.md  WATERMARK.md
docs/adr/: 0001-rust-libvips-ffmpeg.md  0002-multi-upload-single-server-queue.md  0003-trimmed-official-s3-client.md  0004-build-feedback-and-regression-ratchets.md  0005-python-resource-gates.md
docs/evidence/: CGROUP_20260715.md  G5_BROWSER_STORAGE_E2E_20260716.md  G7DEVOPS_LIVE_MODULE_20260717.md  G7DEVOPS_LIVE_R2_E2E_20260717.md  G7_ACTIVATION_COMPATIBILITY_GATE_20260716.md  G7_BROWSER_SMOKE_20260716.md  G7_MODULE_PACKAGE_20260716.md  G7_MODULE_ZIP_INSTALL_20260716.md  G7_SECURITY_RETENTION_GATE_20260716.md  G7_STORAGE_E2E_20260716.md  G7_UPSTREAM_CONTRACT_20260716.md  G7_WATERMARK_PICKER_AUTH_MATRIX_20260716.md  HEAVY_AVIF_20260715.md  HEAVY_IMAGE_20260715.md  INTERNAL_REVALIDATION_20260716.md  LARGE_MULTIPART_AND_G7_POLICY_20260716.md  LIVE_PROVIDER_LIFECYCLE_HARNESS_20260716.md  LOAD_100_20260715.md  MOV_H264_E2E_20260716.md  PYTHON_HARNESS_AND_G7_LAYOUT_20260717.md  PYTHON_RESOURCE_GATES_20260722.md  SETUP_CUI_AND_STORAGE_BOOTSTRAP_20260716.md  VIDEO_FALLBACK_20260715.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: object_key.rs
openapi/: g7mediabooster-v1.json
scripts/: api-smoke.sh  cgroup-smoke-inner.sh  cgroup-smoke.sh  full-stack-smoke.sh  g7-host-security-gate.sh  g7-live-control.sh  g7-live-module-install-remote.sh  g7-policy-smoke.sh  gnuboard5-session-store-smoke.php  gnuboard5-session-store-smoke.sh  heavy-avif.sh  heavy-image.sh  install-dev-tools.sh  large-multipart-smoke.sh  live-storage-conformance.sh  live-storage-preflight-smoke.sh  load-100.sh  native-inventory.sh  native-smoke.sh  package-g7-module.sh  package-server-bundle.sh  server-install-smoke.sh  setup-cli-smoke.sh  storage-conformance.sh  verify-gnuboard5-media-contract.sh  verify-gnuboard7-media-contract.sh  verify-gnuboard7-module-host.php  verify-gnuboard7-module-zip.php
tests/docker/: cgroup-smoke.Dockerfile
tests/fixtures/: fake-capability-sandbox.sh  private-exif.jpg.b64  tiny-h264.mp4.b64  tiny.ppm
tools/: __init__.py
tools/harness/: __init__.py  pyproject.toml
tools/harness/g7mb_harness/: __init__.py  __main__.py  coverage_ratchet.py  evidence.py  full_stack.py  full_stack_fixtures.py  full_stack_large.py  full_stack_policy.py  full_stack_runtime.py  full_stack_scenarios.py  g7_contract_support.py  g7_install.py  g7_install_cli.py  g7_install_support.py  g7_live.py  g7_remote.py  governance.py  media_protocol.py  package_zipapp.py  process.py  resource_gates.py  resource_monitor.py  verify_g7_contract.py
tools/harness/tests/: __init__.py  test_contracts.py  test_coverage_ratchet.py  test_governance.py  test_resource_gates.py  test_resource_monitor.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+118 files in other folders)
