[workspace]
resolver = "3"
members = [
    "apps/g7mb-api",
    "apps/g7mbctl",
    "apps/g7mb-sandbox",
    "apps/g7mb-worker",
    "crates/g7mb-application",
    "crates/g7mb-auth",
    "crates/g7mb-config",
    "crates/g7mb-contracts",
    "crates/g7mb-domain",
    "crates/g7mb-media",
    "crates/g7mb-object-store-s3",
    "crates/g7mb-persistence-sqlite",
    "crates/g7mb-telemetry",
    "crates/g7mb-test-support",
    "xtask",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/jiwonpapa/g7mediabooster"
authors = ["G7MediaBooster contributors"]

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
aws-credential-types = { version = "1.3.0", default-features = false, features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.138.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "tokio", "tracing"] }
base64 = "0.22.1"
clap = { version = "4.6.1", default-features = false, features = ["derive", "env", "help", "std", "usage"] }
config = { version = "0.15.25", default-features = false, features = ["toml"] }
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
getrandom = "0.4.3"
hex = "0.4.3"
hmac = { version = "0.13.0", features = ["zeroize"] }
http-body-util = "0.1.4"
libvips = "2.3.0"
libc = "0.2.186"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = ["http-listener"] }
moka = { version = "0.12.15", default-features = false, features = ["future"] }
mp4 = "0.14.0"
openh264 = "0.9.7"
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
rpassword = "7.5.4"
secrecy = { version = "0.10.3", features = ["serde"] }
seccompiler = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["derive", "macros", "migrate", "runtime-tokio", "sqlite"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde", "serde-well-known"] }
tokio = { version = "1.52.3", default-features = false }
toml = "1.1.3"
tower = { version = "0.5.3", default-features = false, features = ["limit", "load-shed", "timeout", "util"] }
tower-http = { version = "0.7.0", default-features = false, features = ["catch-panic", "limit", "request-id", "sensitive-headers", "set-header", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "json"] }
url = { version = "2.5.8", features = ["serde"] }
utoipa = { version = "5.5.0", features = ["time", "uuid"] }
uuid = { version = "1.23.5", features = ["serde", "v7"] }
wiremock = "0.6.5"

# First-party crates. Keeping these here makes versions and dependency direction explicit.
g7mb-application = { version = "0.1.0", path = "crates/g7mb-application" }
g7mb-auth = { version = "0.1.0", path = "crates/g7mb-auth" }
g7mb-config = { version = "0.1.0", path = "crates/g7mb-config" }
g7mb-contracts = { version = "0.1.0", path = "crates/g7mb-contracts" }
g7mb-domain = { version = "0.1.0", path = "crates/g7mb-domain" }
g7mb-media = { version = "0.1.0", path = "crates/g7mb-media" }
g7mb-object-store-s3 = { version = "0.1.0", path = "crates/g7mb-object-store-s3" }
g7mb-persistence-sqlite = { version = "0.1.0", path = "crates/g7mb-persistence-sqlite" }
g7mb-telemetry = { version = "0.1.0", path = "crates/g7mb-telemetry" }
g7mb-test-support = { version = "0.1.0", path = "crates/g7mb-test-support" }

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
mem_forget = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"

[profile.dev]
# Keep source line information for useful backtraces without retaining full
# dependency debug symbols or multi-gigabyte incremental object graphs.
debug = "line-tables-only"
incremental = false

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = false

[profile.test.package."*"]
debug = false

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
panic = "abort"
strip = "debuginfo"

[profile.bench]
debug = 1
