[package]
name = "g7mb-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
g7mb-domain = { path = "../crates/g7mb-domain" }

[[bin]]
name = "object_key"
path = "fuzz_targets/object_key.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
