[package]
name = "g7mb-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
g7mb-application.workspace = true
g7mb-auth.workspace = true
g7mb-config.workspace = true
g7mb-contracts.workspace = true
g7mb-domain.workspace = true
g7mb-object-store-s3.workspace = true
g7mb-persistence-sqlite.workspace = true
g7mb-telemetry.workspace = true
metrics-exporter-prometheus.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
http-body-util.workspace = true
sqlx.workspace = true
tower.workspace = true
