[package]
name = "g7mb-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
native-vips = ["g7mb-media/native-vips", "g7mb-media/openh264-fallback"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
g7mb-application.workspace = true
g7mb-contracts.workspace = true
g7mb-domain.workspace = true
g7mb-media.workspace = true
g7mb-telemetry.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
seccompiler.workspace = true
