[package]
name = "g7mbctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
getrandom.workspace = true
g7mb-config.workspace = true
g7mb-object-store-s3.workspace = true
hex.workspace = true
rpassword.workspace = true
secrecy.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
