[package]
name = "g7mb-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
g7mb-domain.workspace = true
hex.workspace = true
secrecy.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
