[package]
name = "g7mb-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
hex.workspace = true
hmac.workspace = true
secrecy.workspace = true
sha2.workspace = true
thiserror.workspace = true
