[package]
name = "g7mb-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
config.workspace = true
secrecy.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
