[package]
name = "g7mb-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
time.workspace = true
utoipa.workspace = true
uuid.workspace = true
