[package]
name = "g7mb-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
prometheus = ["dep:metrics-exporter-prometheus"]

[dependencies]
metrics-exporter-prometheus = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
