[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "g7mb-harness"
version = "0.1.0"
description = "G7MediaBooster infrastructure governance and integration harness"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "pytest==8.4.2",
    "ruff==0.13.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "RUF"]
ignore = ["S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["g7mb_harness", "tests"]
